# GUI2

./: .gitattributes  .gitignore  BASELINE_STATUS.md  DATA_FORMAT.md  PAPO_OFFLINE_STATUS.md  README.md  SERVER_DEPLOYMENT_GUIDE.md  SNAPSHOT_MANIFEST.txt  SNAPSHOT_SHA256SUMS.txt  VISUALIZATION_GUIDE.md  config.yaml  personalized_execution.py  proactive_suggestion.py
baselines/: README.md  __init__.py  (+14 more)
tn_dpo_gui/: .gitignore  README.md  pyproject.toml  requirements.txt  run_main_project_pipeline.ps1  run_main_project_pipeline.sh  run_pipeline.ps1  run_pipeline.sh
tn_dpo_gui/configs/: build_pairs.demo.yaml  build_pairs.yaml  eval.demo.yaml  eval.yaml  train_gate.demo.yaml  train_gate.yaml  train_ranker.demo.yaml  train_ranker.yaml
tn_dpo_gui/tests/: test_action_schema.py  test_candidate_generation.py  test_dpo_loss.py  test_gate_capacity.py  test_io_and_checkpoint.py  test_main_project_adapter.py  test_nullspace_projection.py  test_pair_builder.py  test_pair_dataset.py  test_path_resolution.py  test_retrieval_guards.py
tn_dpo_gui/tn_dpo_gui/: __init__.py
tn_dpo_gui/tn_dpo_gui/candidates/: __init__.py  candidate_generator.py  negative_sampler.py  ui_affordance_parser.py
tn_dpo_gui/tn_dpo_gui/counterfactual/: __init__.py  continuation.py  task_equivalence.py
tn_dpo_gui/tn_dpo_gui/data/: __init__.py  action_normalizer.py  action_schema.py  collator.py  dataset.py  main_project_adapter.py  schema.py  split.py
tn_dpo_gui/tn_dpo_gui/encoders/: __init__.py  action_encoder.py  base.py  state_encoder.py  text_encoder.py  trajectory_encoder.py  user_history_encoder.py
(+234 files in other folders)
