[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tn-dpo-gui"
version = "0.1.0"
description = "Isolated Task-Nullspace DPO training toolkit for personalized GUI agents."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "torch>=2.0",
  "PyYAML>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
